infra/k8s/base/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podverse-ingress
  namespace: podverse-base
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.example.com
        - web.example.com
      secretName: podverse-tls-cert
  rules:
    - host: api.example.com # Override in environment overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podverse-api
                port:
                  number: 3000
    - host: web.example.com # Override in environment overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podverse-web
                port:
                  number: 3002
